--- a/popup.css
+++ b/popup.css
@@ -3,10 +3,21 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-button {
-  padding: 10px 20px;
-  border: 1px solid black;
+.button {
+  border-radius: 4px;
   font-weight: bold;
+  padding: 10px 24px;
+  background-color: grey; /* Green */
+  border: 1px solid black;
+  text-align: center;
+  font-size: 18px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+.button:hover {
+    background-color: white
 }
 
 ul {
