--- a/popup.css
+++ b/popup.css
@@ -21,12 +21,14 @@ body {
 }
 
 ul {
+  font-weight: bold;
   list-style-type: none;
   padding-inline-start: 0;
   margin: 1rem 0;
 }
 
 li {
+  font-weight: normal;
   padding: 0.25rem;
 }
 
