--- a/popup.css
+++ b/popup.css
@@ -1,3 +1,8 @@
+:root {
+  --color-background: white;
+  --color-primary: #4608ad;
+}
+
 body {
   width: 20rem;
   font-family: Arial, Helvetica, sans-serif;
