--- a/popup.css
+++ b/popup.css
@@ -1,47 +1,52 @@
 :root {
   --color-background: white;
   --color-primary: #4608ad;
+  --color-secondary: #fafafa;
+  --color-text: #4a4a4a;
 }
+
+* {
+  box-sizing: border-box;
+}
+
 
 body {
-  width: 20rem;
-  font-family: Arial, Helvetica, sans-serif;
+  background: var(--color-background);
+  color: var(--color-text);
+  direction: ltr;
+	font-family: Helvetica, Arial, sans-serif;
+  font-size: .8rem;
+  line-height: 1rem;
+	margin: 1rem;
+  overflow: hidden;
+  min-width: 26rem;
+  max-width: 34rem;
 }
 
-.button {
-  border-radius: 4px;
-  font-weight: bold;
-  padding: 10px 24px;
-  background-color: grey; /* Green */
+a {
+  color: var(--color-primary);
+  outline: none;
+  text-decoration: none;
+}
+
+a:focus, a:hover {
+  text-decoration: underline;
+}
+
+button {
+  padding: 0.5rem 1rem;
   border: 1px solid black;
+  border-radius: 0.2rem;
   text-align: center;
-  font-size: 18px;
-  margin: 4px 2px;
   transition-duration: 0.4s;
   cursor: pointer;
 }
 
-.button:hover {
-    background-color: white
+button:hover {
+    background-color: var(--color-secondary)
 }
 
 span {
   font-weight: bold;
 }
 
-ul {
-  font-weight: bold;
-  list-style-type: none;
-  padding-inline-start: 0;
-  margin: 1rem 0;
-}
-
-ul li {
-  font-weight: normal;
-  padding: 0.25rem;
-}
-
-h3,
-p {
-  margin: 0;
-}
