--- a/popup.css
+++ b/popup.css
@@ -45,7 +45,7 @@ button:hover {
     background-color: var(--color-secondary)
 }
 
-#remove-entry {
+.remove-entry {
   padding: 0.1rem 0.3rem;
   border: 1px solid black;
   border-radius: 0.2rem;
