--- a/popup.css
+++ b/popup.css
@@ -1,8 +1,8 @@
 :root {
   --color-background: whitesmoke;
   --color-primary: #4608ad;
-  --color-secondary: #fafafa;
-  --color-text: #4a4a4a;
+  --color-secondary: #e0e5e7;
+  --color-text: #0F2027;
 }
 
 * {
@@ -10,16 +10,18 @@
 }
 
 body {
-  background: var(--color-background);
+  background: #8e9eab;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #eef2f3, #8e9eab);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #eef2f3, #8e9eab); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-repeat: no-repeat;
   color: var(--color-text);
-  direction: ltr;
 	font-family: Helvetica, Arial, sans-serif;
   font-size: .8rem;
   line-height: 1rem;
 	margin: 1rem;
   overflow: visible;
   min-width: 26rem;
-  max-width: 34rem;
+  max-width: 30rem;
   display: block;
   margin-left: 1rem;
   margin-right: 1rem;
@@ -30,6 +32,7 @@ h1 {
   width: 100%;
   display: block;
   margin: 0 auto;
+  padding: 1rem;
 }
 
 .btn-div {
@@ -60,6 +63,8 @@ a:hover {
 }
 
 button {
+  cursor: pointer;
+  background-color: #b798e9;
   padding: 0.5rem 1rem;
   border: 1px solid var(--color-text);
   border-radius: 1rem;
@@ -73,9 +78,10 @@ button:hover {
 }
 
 .remove-entry {
-  padding: 0.1rem 0.3rem;
+  cursor: pointer;
+  padding: 0rem 0.3rem;
   border: 1px solid var(--color-text);
-  border-radius: 0.5rem;
+  border-radius: 0.4rem;
   text-align: center;
   transition-duration: 0.4s;
   cursor: pointer;
